--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.89"
+chrono = "0.4.38"
 fastwebsockets = { version = "0.8.0", features = ["upgrade"] }
 http-body-util = "0.1.2"
 hyper = "1.4.1"
